--- a/themes/night_blue.css
+++ b/themes/night_blue.css
@@ -1300,12 +1300,6 @@ body.ttrss_utility hr {
   font-size: 11px;
   font-weight: normal;
 }
-.cdm .header .tags {
-  max-width: 50%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
 .cdm .footer {
   height: 30px;
   padding-left: 5px;
@@ -1324,12 +1318,19 @@ body.ttrss_utility hr {
 }
 .cdm .footer .left {
   flex-grow: 2;
+  min-width: 0;
 }
 .cdm .footer .left > * {
   margin-right: 4px;
 }
 .cdm .footer .right > * {
   margin-left: 4px;
+}
+.cdm .footer .tags {
+  max-width: 50%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .cdm .content-inner {
   margin: 10px;
